# isucon7-qualify

webapp/rust/: Cargo.toml  README.md
webapp/rust/src/: main.rs
webapp/rust/views/: add_channel.tmpl  channel.tmpl  history.tmpl  index.tmpl  layout.tmpl  login.tmpl  profile.tmpl  register.tmpl
