[package]
name = "isubata"
version = "0.1.0"
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]

[dependencies]
mysql = "14.0.0"
serde = "1.0.75"
serde_derive = "1.0.75"
handlebars = "1.0.3"
serde_json = "1.0.26"
failure = "0.1.2"
actix-web = "0.7.4"
futures = "0.1.23"
chrono = {version = "0.4.6" , features = ["serde"]}
rand = "0.5.5"
sha-1 = "0.7.0"
tempfile = "3.0.3"
bytes = "0.4.9"
env_logger = "0.5.13"
log = "0.4.4"
